# VeriTrueAI2.0-Backend

./: .env.example  .gcloudignore  .gitignore  DEPLOY_GUIDE.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  README.md  app.yaml  deploy-gcloud.ps1  deploy.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: analytics.py  analyze.py  history.py  search.py  settings.py  upload.py
app/core/: config.py
app/schemas/: models.py
app/services/: analysis_service.py  analytics_service.py  file_service.py  history_service.py  llm_service.py  settings_service.py  web_search_service.py
app/utils/: exceptions.py  logging.py
tests/: __init__.py  test_api.py
